--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,5 +17,13 @@ services:
       - "27017:27017"
     volumes:
       - mongo_data:/data/db
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=mongo
+      - ME_CONFIG_MONGODB_PORT=27017
 volumes:
   mongo_data: 
