--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -35,3 +35,31 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }} 
+
+  dispatch_to_terraform_archi:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fire event to terraform-archi
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT_DISPATCH }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/andreascastello/terraform-archi/dispatches \
+            -d '{"event_type": "trigger-ci"}'
+
+  dispatch_to_integ_deploiement:
+    needs: build-and-push
+    runs-on: ubuntu-latest
+    steps:
+      - name: Fire event to integ-deploiement
+        run: |
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT_DISPATCH }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/andreascastello/integ-deploiement/dispatches \
+            -d '{"event_type": "trigger-ci"}'
