--- a/.github/workflows/on-dispatch.yml
+++ b/.github/workflows/on-dispatch.yml
@@ -5,14 +5,10 @@ on:
     types: [trigger-ci]
 
 jobs:
-  build:
+  simple-job:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      # Exemple d'étapes build/test pour Node.js
-      - name: Install dependencies
-        run: npm ci
-      - name: Run tests
-        run: npm test 
+      - name: Message
+        run: echo "Dispatch reçu, job simple exécuté (en attente de tests)" 
