--- a/.github/workflows/on-dispatch.yml
+++ b/.github/workflows/on-dispatch.yml
@@ -5,10 +5,29 @@ on:
     types: [trigger-ci]
 
 jobs:
-  simple-job:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Message
-        run: echo "Dispatch reçu, job simple exécuté (en attente de tests)" 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: andreascastello06
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+      - name: Extract Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: docker.io/andreascastello06/express_mongodb_app_ynov
+          tags: |
+            type=raw,value=latest,enable={{is_default_branch}}
+            type=sha,format=long
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
